fix & adding location of photographer for QR code
