# docs/swagger.yaml
@@ -50,6 +50,8 @@ definitions:
         type: integer
       photographer:
         $ref: '#/definitions/apiserver.structBaseUserInfo'
+      state:
+        type: string
     type: object
   apiserver.structOrderForPhotographer:
     properties:
@@ -62,6 +64,15 @@ definitions:
         type: integer
       order_cost:
         type: integer
+      state:
+        type: string
+    type: object
+  apiserver.structRequestConfirmQRCode:
+    properties:
+      latitude:
+        type: number
+      longitude:
+        type: number
     type: object
   apiserver.structRequestReview:
     properties:
@@ -90,6 +101,11 @@ definitions:
         items:
           $ref: '#/definitions/apiserver.structBaseUserInfo'
         type: array
+    type: object
+  apiserver.structResponseConfirmQRCode:
+    properties:
+      money:
+        type: integer
     type: object
   apiserver.structResponseCreateQRCode:
     properties:
@@ -215,7 +231,7 @@ definitions:
       username:
         type: string
     type: object
-host: 51.250.22.74:8080
+host: 192.168.1.71:8080
 info:
   contact: {}
   description: API for photographer search app
@@ -595,13 +611,19 @@ paths:
         name: qrcode
         required: true
         type: string
+      - description: coordinates
+        in: body
+        name: coordinates
+        required: true
+        schema:
+          $ref: '#/definitions/apiserver.structRequestConfirmQRCode'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/apiserver.structResponseCreateQRCode'
+            $ref: '#/definitions/apiserver.structResponseConfirmQRCode'
         "400":
           description: Bad Request
           schema:
