# internal/app/apiserver/response.go
@@ -3,6 +3,7 @@ package apiserver
 import (
 	"BIP_backend/internal/app/model"
 	"BIP_backend/internal/app/store"
+	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/sirupsen/logrus"
 )
@@ -34,6 +35,7 @@ type structOrderForPhotographer struct {
 	OrderCost int                 `json:"order_cost"`
 	// Location  model.Location      `json:"coordinates"`
 	Comment string `json:"comment"`
+	State   string `json:"state"`
 }
 
 type structBaseOrderInfoForPhotographer struct {
@@ -46,6 +48,7 @@ type structOrderForClient struct {
 	OrderCost    int                 `json:"order_cost"`
 	//Location     model.Location      `json:"coordinates"`
 	Comment string `json:"comment"`
+	State   string `json:"state"`
 }
 
 type structBaseOrderInfoForClient struct {
@@ -258,6 +261,7 @@ func getBaseOrderInfoForPhotographer(orders []model.Order,
 	ur *store.UserRepository) (*structBaseOrderInfoForPhotographer, error) {
 	var ordersData = &structBaseOrderInfoForPhotographer{}
 
+	fmt.Println(orders)
 	for _, order := range orders {
 		u, err := ur.FindByID(order.ClientID)
 		if err != nil {
@@ -270,6 +274,7 @@ func getBaseOrderInfoForPhotographer(orders []model.Order,
 			Client:    bu,
 			//Location:  order.Location,
 			Comment: order.Comment,
+			State:   order.OrderState,
 		}
 
 		ordersData.OrderList = append(ordersData.OrderList, orderData)
@@ -280,6 +285,7 @@ func getBaseOrderInfoForPhotographer(orders []model.Order,
 func getBaseOrderInfoForClient(orders []model.Order,
 	ur *store.UserRepository) (*structBaseOrderInfoForClient, error) {
 	var ordersData = &structBaseOrderInfoForClient{}
+	fmt.Println(orders)
 
 	for _, order := range orders {
 		var bu *structBaseUserInfo
@@ -296,6 +302,7 @@ func getBaseOrderInfoForClient(orders []model.Order,
 			Photographer: bu,
 			//Location:     order.Location,
 			Comment: order.Comment,
+			State:   order.OrderState,
 		}
 
 		ordersData.OrderList = append(ordersData.OrderList, orderData)
